[tool.poetry]
name = "testrunner"
version = "0.1.0"
description = ""
authors = ["Oleksii Doroshenko <oleksii.doroshenko@globallogic.com>"]

[tool.poetry.dependencies]
python = "^3.9"
framework = {path = "../framework"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
